# tauri-plugin-ios-window

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
docs/: index.md
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: IosWindow.swift  NewViewController.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
