[package]
name = "tauri-plugin-ios-window"
version = "1.0.0"
authors = [ "Seto Elkahfi <seto.elkahfi@gmail.com>" ]
description = "Tauri plugin for iOS window management"
license = "MIT"
homepage = "https://github.com/setoelkahfi/tauri-plugin-ios-window"
repository = "https://github.com/setoelkahfi/tauri-plugin-ios-window"
documentation = "https://docs.rs/tauri-plugin-ios-window"
categories = ["api-bindings", "multimedia", "os"]
keywords = ["tauri", "ios", "mobile", "plugin", "darwin"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ios-window"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
